--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 /* navbar */
 header{
     font-family: 'Montserrat', sans-serif;
@@ -11,6 +14,7 @@ header{
 header a{
     margin: 1rem;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
     text-decoration: none;
     color: #030332;
 }
@@ -46,6 +50,7 @@ nav{
     color: #D6E4E5;
 }
 .nav-btn{
+    background: transparent;
     cursor: pointer;
     display: none;
 }
@@ -67,6 +72,9 @@ nav{
     width: 100%;
     /* background-color: #D6E4E5 */
 }
+ul>a{
+    margin: 10px;
+} 
 header nav{
     z-index: 100000;
     position: fixed;
